# VideoToDoc-skills

./: .gitignore  CHANGELOG.md  README.md  VideoToDoc 编程计划 V2.md  VideoToDoc 编程计划.md  config.example.yaml  pyproject.toml  pytest.ini  下一个Agent交接提示词.txt
.agents/skills/: LICENSE
.agents/skills/_shared/: project.py  text_utils.py
.agents/skills/feishu-markdown-publish/: SKILL.md
.agents/skills/video-summary/: README.md  SKILL.md
.agents/skills/video-to-slides/: SKILL.md
.claude/: settings.json
.claude/skills/: README.md
.claude/skills/_shared/: project.py
.claude/skills/feishu-markdown-publish/: README.md  SKILL.md
.claude/skills/video-summary/: SKILL.md
.claude/skills/video-to-slides/: README.md  SKILL.md
.superpowers/sdd/: progress.md
demo-assets/spacex/: SpaceX上市，背后在玩什么资本游戏_总结_20260630_231231.md  SpaceX上市，背后在玩什么资本游戏_讲义_整理版_20260630_232710.md  manifest.json  transcript.json
reference/: AI圈大乱_MiniMaxM3_总结_20260615.md
scripts/: generate_demo_manifest.py  publish_feishu_versions.py  render_mindmap.py
skills/: .gitignore  requirements.txt
skills/_shared/: project.py
skills/feishu-markdown-publish/: README.md  SKILL.md
skills/video-summary/: README.md  SKILL.md
skills/video-to-notes/: SKILL.md
skills/video-to-slides/: README.md  SKILL.md
src/videotodoc/: align.py  asr.py  audio.py  cli.py  config.py  document.py  feishu.py  mindmap.py  models.py  pipeline.py  slides.py  sync.py
tests/: test_align.py  test_asr.py  test_cli.py  test_config.py  test_demo_manifest.py  test_document.py  test_quality.py  test_slides.py
(+80 files in other folders)
